# cv_data

./: .gitignore  Presentations.bib  Publications.bib  professional.yaml  pyproject.toml
data/: professional.yaml
src/professional_data/: __init__.py  loader.py  schema.py  schema.pyi
tests/: test_schema.py
tests/fixtures/: full_valid.yaml  minimal_valid.yaml
