[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "professional-data"
version = "0.1.0"
description = "Professional data schema and API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ruamel.yaml",
]

[tool.setuptools.packages.find]
where = ["src"]
